--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="container" style="height: 100%; width: 100%;">
           <div class="first_page" style="height: 100vh;">
             <div class="container-fluid bg-1 text-center">
-              <img style="width: 30%; margin-top: 35px; margin-bottom: 25px;" src="swipe_interface.png" alt="Swipe Interface Sketch">
+              <img style="width: 30%; margin-top: 35px; margin-bottom: 25px;" src="swipe_interface.png" alt="Swipe Interface Sketch" class="swipe_interface">
             </div>
             <div class="col-sm text-center" style="color: white; margin-top: 25px; font-size: 13px;">
               <p>The Brown Card swiping interface has a card slot, three colored lights, and an arrow.
@@ -30,7 +30,7 @@
               </p>
             </div>
           </div>
-          <div class="row" style="display: flex; justify-content: flex-start; margin-top: 120px; color: white; line-height: 3.0; font-size: 13px; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; border-radius: 15px;">
+          <div class="row" style="display: flex; justify-content: flex-start; margin-top: 120px; color: white; line-height: 2.75; font-size: 13px; box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px; border-radius: 15px;">
             <div class="col" style="line-height: 4.0; padding-left: 30px;">
               <h3 style="padding-top: 20px;">Questions</h3>
               <p style="font-size: 15px;">
@@ -79,7 +79,7 @@
                 <br>
                 1. The user in this empathy map is a freshman at Brown who lives in a residence hall with the common “Software House” swipe interfaces, and they also keep their Brown Card inside a sleeve attached to a lanyard.<br>
                 2. The problems this persona faces include a lack of intuitive signage depicting the proper use, the lack of feedback indicating when it is not used the proper way, a lack of experience using this interface, and having to remove their card from the sleeve.<br>
-                3. This Brown student keeps their card in a sleeve as some do, but will face more issues with the swipe interfaces as a result of this and their lack of experience.<br><br>
+                3. This Brown student keeps their card in a sleeve as some do, but will face more issues with the swipe interfaces as a result of this and their lack of experience, but they'll get better!<br><br>
                 </p>
                 <div class="col text-center">
                   <img style="width: 100%; margin-top: 50px; margin-bottom: 25px;" src="emp_map2.png" alt="Swipe Interface Sketch">
